/*
 * $Id: ChangeLog,v 1.2084 2004/01/17 02:36:21 fsgiudice Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-17 03:30 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/gtwvt/gtwvt.c
    + Changed function name *Pallete to *Palette
  + tests/wvtgui.ch
    + Added WVT preprocessor commands
  + tests/wvt.prg
    + Added functions to serve preprocessor commands
  + tests/wvtguie.prg
    * Rewrote wvtgui.prg using the new commands

  /*
    If ppl working on WVT accepts this news i'll move wvtgui.ch to include folder
    and wvt.prg in source/rtl/gtwvt

    To build these prgs use:
    bldtest /wvt wvtguie wvt
  */

2004-01-16 17:51 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
  * tests/pp.prg
    + Added Single and Double Quote as Extented Marker terminators.

2004-01-16 16:05 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
  * tests/pp.prg
    * Reverted Extented Marker matching to use delimiter based logic, but added ',' as a delimiter.

2004-01-16 17:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  + include/hbwbase.h
    * replacement for those MSVC users without the Platform SDK
  * source/pp/ppcore.c
  * source/common/hbver.c
    * changed to use hbwbase.h

2004-01-16 17:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/common/hbver.c
    * Create our own OSVERSIONINFOEX for those that don't have the
    * MS Platform SDK installed.

2004-01-16 16:40 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/pp/ppcore.c
    * cosmetic changes

2004-01-16 09:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapigt.h
    + Added missing HB_EXPORT to recent additions.

2004-01-16 09:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed few GPF traps in hb_ppPlatform() introduced by recent addition.